# HagUI

./: .gitignore  CMakeLists.txt  README.md  build.ps1  deploy.ps1
assets/: HagUI.as  HagUI.swf  HagUI_Menu.as  HagUI_Root.as
docs/: Model3D-RE.md  UI-RE.md
src/: Offsets.h  Plugin.cpp  SKSE_Min.h
src/UI/: GfxInject.cpp  HagMenu.cpp  HagMenu.h  Model3D.cpp  OptionRender.cpp  OptionRender.h
src/api/: HagApi.cpp  HagApi.h  HagApiExport.cpp
tools/: make_stage_swf.ps1  make_startmenu_swf.ps1  make_swf.ps1
